[package]
name         = "quec"
version      = "0.1.1"
edition      = "2021"
description  = "a simple text editor"
license      = "GPL-3.0-only"
authors      = ["bgkillas <mswalhelm@gmail.com>"]
readme       = "README.md"
keywords     = ["cli","editor","text-editor"]
categories   = ["text-editors"]
repository   = "https://github.com/bgkillas/quec"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
console      = "0.15.7"
libc         = "0.2.147"