[package]
name         = "quec"
version      = "0.1.3"
edition      = "2021"
description  = "a simple text editor"
license      = "GPL-3.0-only"
authors      = ["bgkillas <mswalhelm@gmail.com>"]
readme       = "README.md"
keywords     = ["cli","editor","text-editor"]
categories   = ["text-editors"]
repository   = "https://github.com/bgkillas/quec"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
console      = {version="0.15.7", default-features=false}

[target.'cfg(not(unix))'.dependencies]
term_size    = "0.3.2"

[target.'cfg(unix)'.dependencies]
libc         = "0.2.147"